--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "react": "15.2.1",
-    "react-native": "^0.31.0"
+    "react-native": "^0.31.0",
+    "react-native-blur" :"1.0.1",
+    "fxblurview" :"1.0.2"
   }
 }
